--- a/assets/views/form.html
+++ b/assets/views/form.html
@@ -7,18 +7,18 @@
         <form class="col s12">
           <div class="row">
             <div class="input-field col s6">
-              <input id="name" type="text" ng-model="name" class="validate">
-              <label for="name">Name</label>
+              <input id="name" type="text" ng-model="name" pattern=".{4,}" required class="validate">
+              <label for="name" data-error="This field is required (at least 4 characters)">Name</label>
             </div>
             <div class="input-field col s6">
-              <input id="company" type="text" ng-model="company" class="validate">
-              <label for="company">Company</label>
+              <input id="company" type="text" ng-model="company" pattern=".{2,}" required class="validate">
+              <label for="company" data-error="This field is required (at least 2 characters)">Company</label>
             </div>
           </div>
           <div class="row">
             <div class="input-field col s12">
               <input id="email" type="email" ng-model="email" class="validate">
-              <label for="email">Email</label>
+              <label for="email" data-error="This doesn't appear to be a valid email.">Email</label>
             </div>
           </div>
           <div class="row">
