--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <nav>
   <div class="nav-wrapper">
-    <a href="/" class="brand-logo">EMC</a>
+    <a href="/" class="logo" alt="brand logo"><img class="emc-logo" alt="emc-logo" src="/images/EMC-Tab-Special-Use-Top.png"></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="#">about</a></li>
     </ul>
