--- a/assets/views/form.html
+++ b/assets/views/form.html
@@ -1,22 +1,22 @@
   <div class="container">
     <div class="col s12 m12">
       <div class="row header">
-        <h3>Please enter your info to be redirected to {{title}}!</h3>
+        <h3 class="flow-text center">Please enter your info to be redirected to {{title}}!</h3>
       </div>
       <div class="row">
-        <form class="col s12">
+        <form class="col s8 offset-s2 m12">
           <div class="row">
-            <div class="input-field col s6">
+            <div class="input-field col s12 m6">
               <input id="name" type="text" ng-model="name" pattern=".{4,}" required class="validate">
               <label for="name" data-error="This field is required (at least 4 characters)">Name</label>
             </div>
-            <div class="input-field col s6">
+            <div class="input-field col s12 m6">
               <input id="company" type="text" ng-model="company" pattern=".{2,}" required class="validate">
               <label for="company" data-error="This field is required (at least 2 characters)">Company</label>
             </div>
           </div>
           <div class="row">
-            <div class="input-field col s12">
+            <div class="input-field col s12 m12">
               <input id="email" type="email" ng-model="email" class="validate">
               <label for="email" data-error="This doesn't appear to be a valid email.">Email</label>
             </div>
