--- a/assets/views/main.html
+++ b/assets/views/main.html
@@ -1,7 +1,7 @@
   <div class="container">
     <div class="col s12 m12">
       <div class="row header">
-        <h3>Please enter the url you would like to generate</h3>
+        <h3 class="flow-text center">Please enter the url you would like to generate</h3>
       </div>
       <div class="row">
         <form class="col s12">
@@ -18,9 +18,9 @@
         </form>
       </div>
       <div class="row" ng-if="url || title">
-        <div class="col s12">
-        <h3> please copy this url! </h3>
-        <h4> http://localhost:1337/#/redirect/{{url | escape}}/{{title}} </h4>
+        <div class="col s12 url-container">
+          <h3 class="flow-text center"> please copy this url! </h3>
+          <h4 class="flow-text center"> http://localhost:1337/#/redirect/{{url | escape}}/{{title}} </h4>
         </div>
       </div>
     </div>
