--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .container {
-  margin-top: 12.5%;
+  margin-top: 12.5% !important;
 }
 
 a.logo {
@@ -43,7 +43,7 @@ img.emc-logo {
 }
 
 .container {
-  margin-top: 12.5%;
+  margin-top: 12.5% !important;
 }
 
 div.nav-wrapper {
