--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,6 +32,8 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/materialize.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <!--STYLES END-->
 
   </head>
