prod grunt build works

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,7 +31,7 @@
     -->
 
     <!--STYLES-->
-    
+    <link rel="stylesheet" href="/min/production.min.css">
     <!--STYLES END-->
 
   </head>
