--- a/assets/styles/components/_variables.scss
+++ b/assets/styles/components/_variables.scss
@@ -4,8 +4,8 @@ $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
 
 $secondary-color: color("light-blue", "darken-4") !default;
-$success-color: color("green", "base") !default;
-$error-color: color("red", "base") !default;
+$success-color: color("green", "darken-2") !default;
+$error-color: color("red", "accent-2") !default;
 $link-color: color("light-blue", "darken-1") !default;
 
 /*** Badges ***/
@@ -13,7 +13,7 @@ $badge-bg-color: $secondary-color !default;
 
 /*** Buttons ***/
 $button-bg-color-disabled: #DFDFDF !default;
-$button-color: $secondary-color !default;
+$button-color: rgb(44, 149, 221) !default;
 $button-color-disabled: #9F9F9F !default;
 $button-color-flat: #343434 !default;
 $button-color-raised: #fff !default;
@@ -49,7 +49,7 @@ $input-border-color: color("grey", "base") !default;
 $input-bg-color: #fff !default;
 $input-error-color: $error-color !default;
 $input-success-color: $success-color !default;
-$input-focus-color: $secondary-color !default;
+$input-focus-color: rgb(44, 149, 221) !default;
 $label-font-size: .8rem !default;
 $input-disabled-color: rgba(0,0,0, .26) !default;
 $input-disabled-solid-color: #BDBDBD !default;
