--- a/assets/views/main.html
+++ b/assets/views/main.html
@@ -20,7 +20,7 @@
       <div class="row" ng-if="url || title">
         <div class="col s12 url-container">
           <h3 class="flow-text center"> please copy this url! </h3>
-          <h4 class="flow-text center"> http://localhost:1337/#/redirect/{{url | escape}}/{{title}} </h4>
+          <h4 class="flow-text center"> http://emc-redirect.herokuapp.com/#/redirect/{{url | escape}}/{{title}} </h4>
         </div>
       </div>
     </div>
