--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,7 +31,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/min/production.min.css">
+    <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
 
   </head>
@@ -97,7 +97,37 @@
 
 
     <!--SCRIPTS-->
-    <script src="/min/production.min.js"></script>
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/materialize/animation.js"></script>
+    <script src="/js/materialize/bin/materialize.js"></script>
+    <script src="/js/materialize/bin/materialize.min.js"></script>
+    <script src="/js/materialize/buttons.js"></script>
+    <script src="/js/materialize/cards.js"></script>
+    <script src="/js/materialize/character_counter.js"></script>
+    <script src="/js/materialize/collapsible.js"></script>
+    <script src="/js/materialize/date_picker/picker.date.js"></script>
+    <script src="/js/materialize/date_picker/picker.js"></script>
+    <script src="/js/materialize/dropdown.js"></script>
+    <script src="/js/materialize/forms.js"></script>
+    <script src="/js/materialize/global.js"></script>
+    <script src="/js/materialize/hammer.min.js"></script>
+    <script src="/js/materialize/jquery.easing.1.3.js"></script>
+    <script src="/js/materialize/jquery.hammer.js"></script>
+    <script src="/js/materialize/leanModal.js"></script>
+    <script src="/js/materialize/materialbox.js"></script>
+    <script src="/js/materialize/parallax.js"></script>
+    <script src="/js/materialize/pushpin.js"></script>
+    <script src="/js/materialize/scrollFire.js"></script>
+    <script src="/js/materialize/scrollspy.js"></script>
+    <script src="/js/materialize/sideNav.js"></script>
+    <script src="/js/materialize/slider.js"></script>
+    <script src="/js/materialize/tabs.js"></script>
+    <script src="/js/materialize/toasts.js"></script>
+    <script src="/js/materialize/tooltip.js"></script>
+    <script src="/js/materialize/transitions.js"></script>
+    <script src="/js/materialize/velocity.min.js"></script>
+    <script src="/js/materialize/waves.js"></script>
     <!--SCRIPTS END-->
 
   </body>
