added skip functionality

--- a/assets/views/form.html
+++ b/assets/views/form.html
@@ -32,6 +32,9 @@
             </div>
           </div>
         </form>
+        <h5 class="center">
+          <a class="flow-text" ng-cloak ng-if="skipThis" ng-href="{{url}}">skip and redirect </a>
+        </h5>
       </div>
     </div>
   </div>
