--- a/assets/views/form.html
+++ b/assets/views/form.html
@@ -32,9 +32,13 @@
             </div>
           </div>
         </form>
-        <h5 class="center">
-          <a class="flow-text" ng-cloak ng-if="skipThis" ng-href="{{url}}">skip and redirect </a>
-        </h5>
+        <div class="row">
+          <div class="col s12 m12">
+            <h5 class="center">
+              <a class="flow-text" ng-cloak ng-if="skipThis" ng-href="{{url}}">skip and redirect </a>
+            </h5>
+          </div>
+        </div>
       </div>
     </div>
   </div>
