--- a/assets/views/form.html
+++ b/assets/views/form.html
@@ -34,8 +34,8 @@
         </form>
         <div class="row">
           <div class="col s12 m12">
-            <h5 class="center">
-              <a class="flow-text" ng-cloak ng-if="skipThis" ng-href="{{url}}">skip and redirect </a>
+            <h6 class="right">
+              <a ng-cloak ng-if="skipThis" ng-href="{{url}}">skip</a>
             </h5>
           </div>
         </div>
