--- a/assets/views/home.html
+++ b/assets/views/home.html
@@ -1,1 +1,7 @@
-home.html
+  <div class="container">
+    <div class="col s12 m12">
+      <div class="row header">
+        <h3 class="flow-text center">Redirecting to EMC...</h3>
+      </div>
+    </div>
+  </div>
