--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,3 +5,9 @@
 </nav>
 
 <ng-view> </ng-view>
+
+<footer class="page-footer">
+  <div class="footer-copyright">
+      <small class="copyright"> © 2015 EMC Corporation. All rights reserved. </small>
+  </div>
+</footer>
