adding ng-cloak

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,9 @@
   </div>
 </nav>
 
-<ng-view> </ng-view>
+<ng-view ng-cloak> </ng-view>
 
-<footer class="page-footer">
+<footer ng-cloak class="page-footer">
   <div class="footer-copyright">
       <small class="copyright"> © 2015 EMC Corporation. All rights reserved. </small>
   </div>
